<resources>
    <string name="app_name">Ultimate Quizzer</string>
    <string name="app_name_cap">ULTIMATE QUIZZER</string>
    <string name="view_high_score">View High Score</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_send_feedback">App Feedback</string>
    <string name="feedback_email">henryudorji@gmail.com</string>
    <string name="feedback_subject">Ultimate Quizzer Feedback</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="pushing_the_limits_of_your_iq">Pushing the limits of your IQ</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light mode</string>
    <string name="select_quiz_type">Select Quiz Type</string>
    <string name="multi_choice_quiz">Multi Choice Quiz</string>
    <string name="true_false">True / False</string>
    <string name="question_1_20">Question: 1/20</string>
    <string name="options_d">Options D</string>
    <string name="option_c">Option C</string>
    <string name="settings">Settings</string>
    <string name="exit_quiz">Exit Quiz</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit.</string>
    <string name="dummy_question">A question is an name of animal place or thing A question is an name of animal place or thing A question is an name of animal place or thing</string>
    <string name="set_total_number_of_questions_in_quiz">Set total number of questions in quiz</string>
    <string name="_10_questions">10 questions</string>
    <string name="_20_questions">20 questions</string>
    <string name="_30_questions">30 questions</string>
    <string name="_40_questions">40 questions</string>
    <string name="result">RESULT</string>
    <string name="quiz_type">Quiz Type</string>
    <string name="total_questions">Total Questions</string>
    <string name="go_back_home">Go back home</string>
    <string name="email_us">Email Us</string>
</resources>